# doX-Q

./: .gitignore  README.md  embedder.py  embedder_v2.ipynb  index.html  main.py  pyproject.toml  retriever_v2.py
templates/: chat.html  index.html
