[project]
name = "hackrx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "llama-cloud-services>=0.6.54",
    "nest-asyncio>=1.6.0",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
]
