[project]
name = "hackrx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "chromadb>=1.0.15",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "llama-cloud-services>=0.6.54",
    "llama-index>=0.13.0",
    "llama-index-embeddings-ollama>=0.7.0",
    "llama-index-llms-groq>=0.4.0",
    "llama-index-llms-ollama>=0.7.0",
    "llama-index-llms-openai>=0.5.0",
    "llama-index-retrievers-bm25>=0.6.1",
    "llama-index-vector-stores-chroma>=0.5.0",
    "nest-asyncio>=1.6.0",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
]
